// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleError Saga should call logSentryErrorAndSetError by default 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        Object {
          "error": Object {
            "code": "mockErrorCode",
          },
          "topic": "mockErrorTopic",
        },
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`logSentryErrorAndSetError saga if error.level is "fatal" should dispatch action setCriticalError 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "error": Object {
          "code": "mockErrorCode",
          "level": "fatal",
        },
        "topic": "mockErrorTopic",
        "type": "app/Errors/SET_CRITICAL_ERROR",
      },
      "channel": null,
    },
  },
}
`;

exports[`logSentryErrorAndSetError saga if topic is cxengage/contacts/list-attributes-response should dispatch action app/InfoTab/SET_CRM_UNAVAILABLE 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "reason": "crmAttributeError",
        "type": "app/InfoTab/SET_CRM_UNAVAILABLE",
      },
      "channel": null,
    },
  },
}
`;

exports[`logSentryErrorAndSetError saga if topic is cxengage/contacts/list-layouts-response should dispatch action app/InfoTab/SET_CRM_UNAVAILABLE 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "reason": "crmLayoutError",
        "type": "app/InfoTab/SET_CRM_UNAVAILABLE",
      },
      "channel": null,
    },
  },
}
`;

exports[`logSentryErrorAndSetError saga if topic is cxengage/session/config-details should dispatch action app/Errors/SET_LOGIN_ERROR_AND_RELOAD 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "errorType": "configLoadFailed",
        "type": "app/Errors/SET_LOGIN_ERROR_AND_RELOAD",
      },
      "channel": null,
    },
  },
}
`;

exports[`logSentryErrorAndSetError saga should call Raven.captureException with a new Error created from the action.topic 1`] = `[Error: mockErrorTopic]`;

exports[`logSentryErrorAndSetError saga should call Raven.captureException with the SDK error in the extra info and error.code in the tags 1`] = `
Object {
  "extra": Object {
    "sdkError": Object {
      "code": "mockErrorCode",
    },
  },
  "level": "warning",
  "tags": Object {
    "sdkCode": "mockErrorCode",
  },
}
`;

exports[`setLoginErrorAndReload Saga should call CxEngage logout 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "mockLogoutFunction",
        undefined,
        "Errors",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`setLoginErrorAndReload Saga should call SDK logout function 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "mockLogoutFunction",
        undefined,
        "Errors",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`setLoginErrorAndReload Saga should call SDK subscribe function with session topic 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "mockSubscribeFunction",
        "cxengage/session/started",
        "Errors",
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`setLoginErrorAndReload Saga should call localStorage.setItem with "ADError" and errorType 1`] = `
Array [
  "ADError",
  "mockErrorType",
]
`;
